feat: redis cache with re-query logic

--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -4,3 +4,9 @@ spring:
     url: ${crawlingdb.url}
     username: ${db.username}
     password: ${db.password}
+
+  data:
+    redis:
+      database: ${redis.database}
+      port: ${redis.port}
+      host: ${redis.host}
